Fixed the spacing between images, added a button with animation for online shopping.

--- a/style1.css
+++ b/style1.css
@@ -108,6 +108,97 @@ label{
 .metafooter i:hover{
     color: white;
 }
+.shop-now {
+    margin: 0;
+    padding: 0;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 20vh;
+    background: rgb(238, 237, 237);
+    font-weight: bold;    
+}
+.shop-now a {
+    position: absolute;
+    display: inline-block;
+    padding: 15px 30px;
+    color: #051c45;
+    text-transform: upper;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
+}
+
+.shop-now a:hover{
+    color: white;
+    background: #2186f3;
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2169f3, 0 0 80px #2196f3;
+    transition-delay: 1s;
+}
+a span{
+    position: absolute;
+    display: block;
+
+}
+
+a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #2196f3);
+}
+
+.shop-now a:hover span:nth-child(1){
+    left: 100%;
+    transition: 1s;
+}
+
+a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #2196f3);
+}
+
+.shop-now a:hover span:nth-child(3){
+    right: 100%;
+    transition: 0.8s;
+    transition-delay: 0.4s;
+}
+a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #2196f3);
+}
+
+.shop-now a:hover span:nth-child(2){
+    top: 100%;
+    transition: 0.8s;
+    transition-delay: 0.25s;
+}
+a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #2196f3);
+}
+
+.shop-now a:hover span:nth-child(4){
+    bottom: 100%;
+    transition: 0.8s;
+    transition-delay: 0.6s;
+}
+
+
+
+
 
 @media only screen and (max-width: 850px){
     body{
@@ -174,12 +265,19 @@ label{
     display: flex;
     flex-wrap: wrap;
 }
+.row img{
+    padding-bottom: 1rem;
+}
 .col{
     max-width: 25%;
     height: auto;
     flex:25%;
-    padding-left:  10px;
-    padding-bottom: 30px;
+    padding-left:  1rem;
+    padding-bottom: 1rem;
+}
+.row img:hover{
+    cursor: pointer;
+    transform: scale(1.05);
 }
 @media only screen and (max-width: 900px) {
     .col{
